# conan_template

./: .cproject  .project  CMakeLists.txt  README.TXT  README.md  build_and_package.sh  conanfile.py
hello_consumer/: .project  CMakeLists.txt  build.sh  conanfile.py
hello_consumer/include/: program_simulator.h
hello_consumer/src/: main.cpp  program_simulator.cpp
src/: hello.cpp
test/: CMakeLists.txt
