cmake_minimum_required(VERSION 3.10)

# Configuraci칩n b치sica del proyecto
project(hello_project VERSION 0.1 DESCRIPTION "A Hello World Library")

# Crear la biblioteca est치tica `hello` usando el archivo fuente `hello.cpp`
add_library(hello STATIC src/hello.cpp)

# Configurar el directorio de inclusi칩n para la biblioteca `hello`
target_include_directories(hello PUBLIC include)

# Incluir el subdirectorio de pruebas
add_subdirectory(test)
